# gitverse-rustic

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: draft.rs  fileio.rs  git.rs  main.rs  parse.rs  prod.rs  releases.rs  snippets.rs  tags.rs
