# https://doc.rust-lang.org/cargo/getting-started/first-steps.html#first-steps-with-cargo
[package]
name = "gitverse"
version = "0.0.1"
description = "Rustic implementation of GitVerse"
license = "MIT"
documentation = "https://thevickypedia.github.io/gitverse"
homepage = "https://github.com/thevickypedia/gitverse-rustic"
repository = "https://github.com/thevickypedia/gitverse-rustic"

# # For local debug purpose
#[[bin]]
#name = "git"
#path = "src/main.rs"

[dependencies]
log = "0.4.20"
chrono = "0.4.31"
serde_json = "1.0"
env_logger = "0.10"
serde = { version = "1.0", features = [ "derive" ] }
reqwest = { version = "0.11.22", features = ["blocking"] }
